web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-variable-declaration/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,19)
1|"use strict"; var yield;
 |                 ^
